# obs-plugin-follow-active-window

./: Cargo.toml
src/: crop_filter.effect  data.rs  lib.rs
