[package]
name = "obs-plugin-follow-active-window"
version = "0.1.0"
edition = "2021"

[dependencies]
obs-wrapper = { version = "0.3.0" }
log = "0.4"
active-win-pos-rs = { version = "0.5.0" }

[patch.crates-io]
obs-wrapper = { path = "E:\\dev\\rust\\obs-plugins\\rust-obs-plugins" }

[lib]
name = "followactivewindow"
crate-type = ["cdylib"]
